
plugins {
    id 'groovy'                     // For java and groovy projects
    id 'war'                        // For generating war (web app archive) files
    id 'org.gretty' version '3.0.1' // Web app development plugin
}

wrapper {
    gradleVersion = '6.2.2'
    distributionType = Wrapper.DistributionType.ALL
}

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

// project.group = ...
// project.version = ...

repositories {
    jcenter()
    maven {
        url 'https://maven.restlet.talend.com/'
    }
}

dependencies {
    compile project(':data-model')                             // The common "control-center"-related data model
    compile 'javax.servlet:javax.servlet-api:3.1.0'            // The Java servlet libraries
    compile 'org.restlet.jee:org.restlet:2.4.2'                // For writing RESTful APIs
    compile 'org.restlet.jee:org.restlet.ext.fileupload:2.4.2' // For handling file uploads in Restlet
    compile 'com.google.code.gson:gson:2.8.2'                  // JSON library
    compile 'org.apache.commons:commons-dbcp2:2.7.0'           // DB connection pool
    compile 'org.springframework:spring-jdbc:5.2.2.RELEASE'    // Spring JDBC classes

    providedRuntime 'javax.servlet:javax.servlet-api:3.1.0'    // Provided by the servlet container at runtime
    runtime 'org.restlet.jee:org.restlet.ext.servlet:2.4.2'    // Servlet adapter for Restlet framework
    runtime 'mysql:mysql-connector-java:8.0.18'                // The MySQL JDBC driver

    gretty 'mysql:mysql-connector-java:8.0.18'                 // Make sure it is also available to the gretty plugin
}

gretty {
    // scanInterval = 0 // Disable hot deployment
    // servletContainer = 'tomcat8' // Use the default (jetty)

    httpEnabled = true
    httpsEnabled = false
    httpPort = 9000
    httpsPort = 9000
    contextPath = ''
}
